# scarabeo-ace-44

./: .env  .env.development  .env.example  .env.production  .gitmodules  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
docs/: FunzionamentoQuackle.txt  Guida integrazione quackle  game_rules.md  generator.h
docs/data/lexica/: enable1.dawg
engine/: Dockerfile  Dockerfile.optimized  README.md  pyproject.toml  railway.toml  test_board.json
engine/app/: main.py  models.py
engine/lexica_src/: enable1.txt
engine/quackle_wrapper/: CMakeLists.txt  engine.cpp
engine/quackle_wrapper/debug/: memwrap.cc  memwrap.h  memwrap_simple.cc  memwrap_simple.h
engine/scripts/: debug_gaddag.sh  exec_ping.sh  init_lexicon.sh  route_discovery.sh  smoke.sh  smoke_test.sh  smoke_test_en.sh  verify_runtime.sh
engine/tools/makegaddag/: CMakeLists.txt  main.cpp
quackle-service/: Dockerfile  app.py  requirements.txt
rating-api/: .env.example  Dockerfile  drizzle.config.ts  package-lock.json  package.json
rating-api/migrations/: 0000_dear_mauler.sql  0001_add_rating.sql  0002_rush.sql  0003_absurd_doctor_doom.sql  0004_polite_the_hunter.sql  0005_daily_challenge.sql
rating-api/migrations/meta/: 0000_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
rating-api/scripts/: makeDaily.ts
rating-api/src/: db.ts  elo.test.ts  elo.ts  index.ts  schema.ts  seed.ts
rating-api/src/__tests__/: analysis.test.ts  puzzle.test.ts
rating-api/src/analysis/: solver.ts
rating-api/src/daily/: generator.ts
rating-api/src/puzzle/: puzzle.ts
rating-api/src/puzzle/__tests__/: puzzle.test.ts
rating-api/src/routes/: analysis.ts  daily.ts
scripts/: check-env.ts  test-quackle.mjs
service-quackle/: .env.example  Dockerfile  build_dawg.cpp  entrypoint.sh  quackle_bridge  test_bridge.py
service-quackle/app/: main.py
service-quackle/bridge/: engine_wrapper  quackle_bridge.cpp  simple_bridge.cpp
service-quackle/ops/: bootstrap_lexicon.sh  entrypoint.sh  setup_enable_lexicon.sh
service-quackle/quackle_service/: main.py
src/: App.tsx  config.ts  index.css  main.tsx
src/ai/: BotMovePicker.ts  ScrabbleBot.ts
src/api/: analysis.ts  client.ts  daily.ts  puzzle.ts  quackle.ts
src/components/: AnalysisPanel.tsx  AppSidebar.tsx  BlankTileDialog.tsx  DictionaryLoader.tsx  DifficultyModal.tsx  ErrorBoundary.tsx  ExchangeTilesDialog.tsx  GameChat.tsx  GameFlow.tsx  NotificationSystem.tsx  PlayButtons.tsx  PuzzleLeaderboard.tsx  PuzzleTopMoves.tsx  QuackleHealthCheck.tsx  QuackleServiceStatus.tsx  ScrabbleBoard.tsx  ScrabbleTile.tsx  ThemeToggle.tsx  TileActions.tsx  TileCounter.tsx  TileRack.tsx
src/components/ui/: command.tsx
src/contexts/: AuthContext.tsx  BotContext.tsx  DictionaryContext.tsx  GameContext.tsx  QuackleContext.tsx
src/hooks/: useBot.ts  useCountdown.ts  useDaily.ts  useGame.test.ts  useGame.ts  useGameAnalysis.ts  useLobbySocket.ts  useMatchmaking.ts  useMultiplayerGame.ts  usePlayerRating.ts  usePuzzle.ts  useQuackle.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: Auth.tsx  Daily.tsx  DailyChallenge.tsx  Dashboard.tsx  Dictionary.tsx  Game.tsx  Index.tsx  Lobby.tsx  MultiplayerGame.tsx  NotFound.tsx  PuzzleGame.tsx  QuackleDebug.tsx
src/services/: quackleClient.ts
src/store/: game.ts
src/store/__tests__/: game.test.ts
src/types/: daily.ts  game.ts  multiplayer.ts  puzzle.ts
src/utils/: BotBasedPuzzleBuilder.ts  dictionary.ts  gameRules.test.ts  gameRules.ts  legalPuzzleGenerator.ts  moveValidation.test.ts  moveValidation.ts  newScoring.ts  newWordFinder.ts  progressivePuzzleBuilder.ts  puzzleGenerator.ts  puzzleGenerator15x15.ts  scoring.test.ts  scoring.ts  timeUtils.ts  wordFinder.ts
supabase/: config.toml
supabase/functions/puzzle/: index.ts
supabase/migrations/: 20250728184637-70855f47-0903-4c3d-9a79-6e3797f5c175.sql  20250728185006-cfbc0ed6-8b8f-49eb-9e57-57c281966f4b.sql  20250729095453-657e9288-20c8-4367-b3f3-353c8fbdbca0.sql  20250729095755-24b77c2f-a3a7-426f-87d0-363e09ee11c7.sql  20250729095829-c13a6e0e-389a-451f-abdc-974ce1fbcae7.sql  20250825164447_d5e91dca-a24b-4271-886e-572980b143d1.sql  20250825172208_bd082715-4e88-4e23-92a6-879e8172c1c0.sql  20250826120000_add_resign_move_type.sql  20250827181445_0f5bb679-6b86-4e47-825e-e6a4ca00163b.sql  20250829115604_1c45556f-cd7e-4ee1-b947-a643937e3a5e.sql
