[project]
name = "scarabeo-engine"
version = "0.1.0"
description = "Scarabeo move engine API (FastAPI + wrapper C++)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8080
factory = false

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


